Refactor BookService to improve code clarity, remove pagination logic from class handling API calls